// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AbstractTextInput renders icon when it is passed by props 1`] = `
<div
  className="lab-input "
>
  <input
    autoComplete="off"
    className="lab-input__field "
    id="testInput"
    onChange={[Function]}
    placeholder=" "
    type="text"
    value=""
  />
  <div
    className="lab-input__borders"
  />
  
  
  <div
    className="lab-input__label-wrapper"
  >
    
    <label
      className="lab-input__label"
      htmlFor="testInput"
    >
      Test Input
    </label>
  </div>
  <button
    className="lab-input__icon"
    onClick={[Function]}
    type="button"
  >
    <span
      className="lab-icon lab-icon--star"
    />
  </button>
  
</div>
`;

exports[`AbstractTextInput renders prefix when it is passed by props 1`] = `
<div
  className="lab-input "
>
  <input
    autoComplete="off"
    className="lab-input__field lab-input__field--prefixed "
    id="testInput"
    onChange={[Function]}
    placeholder=" "
    type="text"
    value=""
  />
  <div
    className="lab-input__borders"
  />
  <span
    className="lab-input__prefix"
  >
    R$
  </span>
  
  <div
    className="lab-input__label-wrapper"
  >
    <span
      className="lab-input__prefix"
    >
      R$
    </span>
    <label
      className="lab-input__label"
      htmlFor="testInput"
    >
      Test Input
    </label>
  </div>
  
</div>
`;

exports[`AbstractTextInput renders required icon when it is passed by props 1`] = `
<div
  className="lab-input "
>
  <input
    autoComplete="off"
    className="lab-input__field "
    id="testInput"
    onChange={[Function]}
    placeholder=" "
    type="text"
    value=""
  />
  <div
    className="lab-input__borders"
  />
  
  
  <div
    className="lab-input__label-wrapper"
  >
    
    <label
      className="lab-input__label"
      htmlFor="testInput"
    >
      Test Input
    </label>
  </div>
  <button
    className="lab-input__icon"
    onClick={[Function]}
    type="button"
  >
    <span
      className="lab-icon lab-icon--star"
    />
  </button>
  
</div>
`;

exports[`AbstractTextInput renders suffix when it is passed by props 1`] = `
<div
  className="lab-input "
>
  <input
    autoComplete="off"
    className="lab-input__field lab-input__field--suffixed "
    id="testInput"
    onChange={[Function]}
    placeholder=" "
    type="text"
    value=""
  />
  <div
    className="lab-input__borders"
  />
  
  <div
    className="lab-input__suffix"
  >
    .com
  </div>
  <div
    className="lab-input__label-wrapper"
  >
    
    <label
      className="lab-input__label"
      htmlFor="testInput"
    >
      Test Input
    </label>
  </div>
  
</div>
`;

exports[`AbstractTextInput renders with base props 1`] = `
<div
  className="lab-input "
>
  <input
    autoComplete="off"
    className="lab-input__field "
    id="testInput"
    onChange={[Function]}
    placeholder=" "
    type="text"
    value=""
  />
  <div
    className="lab-input__borders"
  />
  
  
  <div
    className="lab-input__label-wrapper"
  >
    
    <label
      className="lab-input__label"
      htmlFor="testInput"
    >
      Test Input
    </label>
  </div>
  
</div>
`;
